--- a/Baha'i/AB/SAQ/p001-080Part1.html
+++ b/Baha'i/AB/SAQ/p001-080Part1.html
@@ -397,6 +397,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note29">29</a><p>
 	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Manifestation(s)ofGodAbraham">Abraham</a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">12</DIV></center><p></small></td>
@@ -440,7 +441,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para43">p. 107</a>
+	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para43">p. 107</a><p>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note31">31</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -460,6 +462,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note32">32</a><p>
 	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Moses">Moses</a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">14</DIV></center><p></small></td>
@@ -553,6 +556,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Cf. <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:42">John 6:42</a>.
+    <hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note128">128</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -599,6 +604,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note61">61</a><p>
 	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Manifestation(s)ofGodMuhammad">Muhammad</a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">18</DIV></center><p></small></td>
@@ -810,8 +816,8 @@
 	<td VALIGN=top><small>
 	1 Jamál-i-Mubárak, the Blessed Beauty, the title which is here given to Bahá'u'lláh. He is also called Jamál-i-Qidam, the Preexistent, or Ancient Beauty. But we shall designate Him as Bahá'u'lláh, the title by which He is known in the West.
 	<hr>
-	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláhTitlesandNames">Titles and Names of Baha'u'llah</a>], Audio: <a href="https://drive.google.com/file/d/0B6cYw5IwKTYscWhBOUgxcWE2cm8/edit">as read by Nina Vazin</a>; see <a href="../../../download.html">Download Center</a>
-	
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bahá'u'lláhTitlesandNames">Titles and Names of Baha'u'llah</a>], Audio: <a href="../../../Downloads/Arabic-TitlesOfBaha'u'llah-NinaVazin.mp3">as read by Nina Vazin</a>; see <a href="../../../download.html">Download Center</a>
+
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1550,6 +1556,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Cf. Rev. 11:6.
+    <hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note36">36</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1908,7 +1916,8 @@
 	This rod out of the stem of Jesse might be correctly applied to Christ, for Joseph was of the descendants of<a name="p63"></a> Jesse, the father of David; but as Christ found existence through the Spirit of God, He called Himself the Son of God. If He had not done so, this description would refer to Him. Besides this, the events which he indicated as coming to pass in the days of that rod, if interpreted symbolically, were in part fulfilled in the day of Christ, but not all; and if not interpreted, then decidedly none of these signs happened. For example, the leopard and the lamb, the lion and the calf, the child and the asp, are metaphors and symbols for various nations, peoples, antagonistic sects and hostile races, who are as opposite and inimical as the wolf and lamb. We say that by the breath of the spirit of Christ they found concord and harmony, they were vivified, and they associated together.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note128">128</a><p>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">63</DIV></center><p></small></td>
 </tr>
