--- a/Baha'i/AB/SAQ/p141-174Part3.html
+++ b/Baha'i/AB/SAQ/p141-174Part3.html
@@ -110,7 +110,8 @@
 	The fourth degree of spirit is the heavenly spirit; it is the spirit of faith and the bounty of God; it comes from the breath of the Holy Spirit, and by the divine power it becomes the cause of eternal life. It is the power which makes the earthly man heavenly, and the imperfect man perfect.<a name="p145"></a> It makes the impure to be pure, the silent eloquent; it purifies and sanctifies those made captive by carnal desires; it makes the ignorant wise.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note57">57</a><p>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">145</DIV></center><p></small></td>
 </tr>
@@ -616,7 +617,8 @@
 	The independent Prophets are the lawgivers and the founders of a new cycle. Through Their appearance the world puts on a new garment, the foundations of religion are established, and a new book is revealed. Without an intermediary They receive bounty from the Reality of the Divinity, and Their illumination is an essential illumination. They are like the sun which is luminous in itself: the light is its essential necessity; it does not receive light from any other star. These Dawning-places of the morn of Unity are the sources of bounty and the mirrors of the Essence of Reality.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note111">111</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -826,7 +828,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para47">&para;47</a>
+	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p019-088Aqdas.html#para47">&para;47</a><p>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note301">301</a><p>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">171</DIV></center><p></small></td>
 </tr>
