--- a/Baha'i/AB/SAQ/p175-260Part4.html
+++ b/Baha'i/AB/SAQ/p175-260Part4.html
@@ -1385,7 +1385,8 @@
 	<center><h2>THE STATE OF MAN AND HIS PROGRESS AFTER DEATH</h2></center>
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note163">163</a><p>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">235</DIV></center><p></small></td>
 </tr>
