--- a/Baha'i/AB/SAQ/p261-306Part5.html
+++ b/Baha'i/AB/SAQ/p261-306Part5.html
@@ -901,7 +901,8 @@
 	To recapitulate: the Súfís admit God and the creature, and say that God resolves Himself into the infinite forms of the creatures, and manifests like the sea, which appears in the infinite forms of the waves. These phenomenal and imperfect waves are the same thing as the Preexistent Sea, which is the sum of all the divine perfections. The Prophets, on the contrary, believe that there is the world of God, the world of the Kingdom, and the world of Creation: three things. The first emanation from God is the bounty of the Kingdom, which emanates and is reflected in the reality of the creatures, like the light which emanates from the sun and is resplendent in creatures; and this bounty, which is the light, is reflected in infinite forms in the reality of all things, and specifies and individualizes itself according to the capacity, the worthiness and the intrinsic value of things. But the affirmation of the Súfís requires that the Independent Wealth should descend to the degree of poverty, that the Preexistent should confine itself to phenomenal forms, and that Pure Power should be restricted to the state of weakness, according to the limitations of contingent beings. And this is an evident error. Observe that the reality of man, who is the most noble of creatures, does not descend to the reality of the animal, that the essence of the animal, which is endowed with the powers of sensation, does not abase itself to the degree of the vegetable, and that the reality of the vegetable, which is the power of growth, does not descend to the reality of the mineral.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note212">212</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
