--- a/Baha'i/AB/SFWAB/Preface.html
+++ b/Baha'i/AB/SFWAB/Preface.html
@@ -110,7 +110,7 @@
 </tr>
 <tr>
 	<td><a name="para6"></a><a name="pvii"/>
-    <center><h2>References to the <a class="hh" title="'Reading'. The sacred book of Islam, revealed by Muhammad. The verses are built up into 114 chapters called 'Súrihs', and was composed over a period of 21 years" href="../../../CLUG/UnifiedGlossary.html#Qur'án">Qur'án</a></h2></center>
+    <center><h2>References to the <a class="hh" title="Qur'án, literally 'Reading'. The sacred book of Islam, revealed by Muhammad. The verses are built up into 114 chapters called 'Súrihs', and was composed over a period of 21 years" href="../../../CLUG/UnifiedGlossary.html#Qur'án">Qur'án</a></h2></center>
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
