--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -69,7 +69,7 @@ para176 - footnotes: added ROB V1 index
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["He doeth whatsoever He willeth"] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para47">&para;47</a><p>
+	["He doeth whatsoever He willeth"] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para47">&para;47</a>; <i>The Kitáb-i-Íqán</i>, <a href="../KI/p095-258.html#parb271">&para;271</a>, Annotations <a href="../KI/Annotations.html#note214">214</a><p>
 	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#InfallibilityMostGreat">Most Great Infallibility</a>]<p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -181,6 +181,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note200">200</a><p>
 	["This Wronged One..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1, pp. <a href="../../Others/ROB/V1/p018-044Ch03.html#p19">19</a>, <a href="../../Others/ROB/V1/p018-044Ch03.html#p20">20</a>, <a href="../../Others/ROB/V1/p018-044Ch03.html#p22">22</a>, <a href="../../Others/ROB/V1/p053-070Ch05.html#p62">62</a>-3; vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p374">p. 374</a><p>
 	["In the Tablet..."] <i>The Revelation of Bahá'u'lláh</i> vol. 2, pp. <a href="../../Others/ROB/V2/p337-369Ch16.html#p338">338</a>-56; vol. 3, pp. <a href="../../Others/ROB/V3/p174-203Ch09.html">174</a>-91.
 	</small></td> 
@@ -554,6 +555,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note162">162</a><p>
 	["The third Tajallí..."] <a href="../TOB/p001-270TOB.html#para151"><i>Tajallíyát</i></a><p>
 	[<i>Tajallíyát</i>] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p118-144Ch08.html">ch. 8</a>; <a href="../../Others/ROB/V1/p105-152Ch09.html#facingp110">vol. 1</a>; vol. 3, <a href="../../Others/ROB/V3/p108-132Ch06.html#p120">p. 120n</a>;<p>
 	[Mother-Book] Introduction, <a href="Introduction.html#Mother-Book">p. xiv</a>  
@@ -781,7 +783,8 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	O Shaykh! This station is the station in which one dieth to himself and liveth in God. Divinity, whenever I mention it, indicateth My complete and absolute self-effacement. This is the station in which I have no control over mine own weal or woe nor over my life nor over my resurrection.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note311">311</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -810,6 +813,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note312">312</a><p>
 	["O Shaykh! No breeze can compare..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p391-412Ch25.html#p410">p. 410</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">43</DIV></center></small></td>
@@ -820,6 +824,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note225">225</a><p>
 	["Men have failed to perceive..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p391-412Ch25.html#p407">p. 407</a><p>
 	["Manifold are Our relationships..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p053-070Ch05.html#p59">p. 59</a>
 	</small></td>
@@ -1051,7 +1056,8 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	And further We have said: "He Who is the Father is come, and the Son (Jesus Christ), in the holy vale, crieth out: 'Here am I, here am I, O Lord, my God!', whilst <span style="background-color: #ffffCC" TITLE="The mountain where the Law was revealed by God to Moses">Sinai</span> circleth round the House, and the Burning Bush calleth aloud: 'The All-Bounteous is come mounted upon the clouds! Blessed is he that draweth nigh unto Him, and woe betide them that are far away.'
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note121">121</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1061,6 +1067,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note145">145</a><p>
 	["one of His names..."] Introduction, <a href="Introduction.html#para29">p. xiv</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">58</DIV></center></small></td>
@@ -1327,6 +1334,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note276">276</a><p>
 	<i>'he that was chosen to be slain was but one person'</i>, a reference to the sacrifice of Abraham. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#76a">Appendix III</a>)
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -1434,6 +1442,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note26">26</a><p>
 	["Know thou that..."] <i>Tablets of Bahá'u'lláh</i> <a href="../TOB/p001-270TOB.html#para577">p. 208</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p95">p. 95</a><p>
 	["Open thine eyes..."] <i>Tablets of Bahá'u'lláh</i> <a href="../TOB/p001-270TOB.html#para577">p. 208</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p96">p. 96</a><p>
 	["the Veil of Divinity..."] Introduction, <a href="Introduction.html#para34">p. xv</a><p>
@@ -1518,7 +1527,8 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	It is now incumbent upon His Majesty the Sháh--may God, exalted be He, protect him--to deal with this people with loving-kindness and mercy. This Wronged One pledgeth Himself, before the Divine <span style="background-color: #ffffCC" TITLE="Literally, 'a cube.' The cube-like building in the center of the Mosque at Mecca, which contains the Black Stone">Kaaba</span>, that, apart from truthfulness and trustworthiness, this people will show forth nothing that can in any way conflict with the world-adorning views of His Majesty. Every nation must have a high regard for the position of its sovereign, must be submissive unto him, must carry out his behests, and hold fast his authority. The sovereigns of the earth have been and are the manifestations of the power, the grandeur and the majesty of God. This Wronged One hath at no time dealt deceitfully with anyone. Every one is well aware of this, and beareth witness unto it. Regard for the rank of sovereigns is divinely ordained, as is clearly attested by the words of the Prophets of God and His chosen ones. He Who is the Spirit (Jesus)--may peace be upon Him--was asked: "O Spirit of God! Is it lawful to give tribute to Caesar or not?" And He made reply: "Yea, render to Caesar the things that are Caesar's and to God the things<a name="p90"/> that are God's." He forbade it not. These two sayings are, in the estimation of men of insight, one and the same, for if that which belonged to Caesar had not come from God, He would have forbidden it. And likewise in the sacred verse: "Obey God and obey the Apostle, and those among you invested with authority." By "those invested with authority" is meant primarily and more especially the <span style="background-color: #ffffCC" TITLE="Title of the twelve Shí'ah successors of Muhammad">Imáms</span>--the blessings of God rest upon them! They, verily, are the manifestations of the power of God, and the sources of His authority, and the repositories of His knowledge, and the daysprings of His commandments. Secondarily these words refer unto the kings and rulers--those through the brightness of whose justice the horizons of the world are resplendent and luminous. We fain would hope that His Majesty the Sháh will shine forth with a light of justice whose radiance will envelop all the kindreds of the earth. It is incumbent upon every one to beseech the one true God on his behalf for that which is meet and seemly in this day.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note86">86</a><p>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">90</DIV></center></small></td>
 </tr>
@@ -1673,6 +1683,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td rowspan="3" VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note26">26</a><p>
 	[Mír Muhammad-Husayn] <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V4/p463-485Index.html#Muhammad-Husayn,Mír">vol. 4</a><p>
 	["O She-Serpent!..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para587">p. 214</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p96">p. 96</a><p>
 	[The King and Beloved of the Martyrs] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p073-090Ch05.html">ch. 5</a><p>
@@ -1813,6 +1824,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<td rowspan="3" VALIGN=top><small>
 	<hr>
 	["Verses concerning the Divine Presence..."] Introduction, <a href="Introduction.html#para36">p. xv</a><p>
+	<i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note121">121</a><p>
 	<i>'Divine Presence'</i>, see vol. 4, p. <a href="../../Others/ROB/V4/p391-412Ch25.html#p408">408</a>, and vol. 2, pp. <a href="../../Others/ROB/V2/p001-028Ch01.html#p16">16</a>-18. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#115">Appendix III</a>)
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">116</DIV></center></small></td>
@@ -1829,9 +1841,9 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note270">270</a><p>
 	[Verses concerning the Divine Presence] Introduction, <a href="Introduction.html#para36">p. xv</a><p>
 	<i>'Divine Presence'</i>, see vol. 4, p. <a href="../../Others/ROB/V4/p391-412Ch25.html#p409">409</a>, and vol. 2, pp. <a href="../../Others/ROB/V2/p001-028Ch01.html#p16">16</a>-18. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#115">Appendix III</a>)<p>
-	<a href="../KI/Cover.html">The Kitáb-i-Íqán</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">119</DIV></center></small></td>
 </tr>
@@ -1860,6 +1872,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note154">154</a><p>
 	<i>'Shaykh-i-Ahsá'í (Shaykh Ahmad)'</i>, the founder of the Shaykhí sect. See <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note171">Note 171</a>; <a href="../../Others/DBNN/p001-018Ch01.html"><i>The Dawn-Breakers</i></a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, vol. 2 <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">p. 180</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#120b">Appendix III</a>)<p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -1998,6 +2011,7 @@ for the Book itself is the unerring Balance established amongst men. In this mos
 	</td>
 	<td rowspan="2" VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note200">200</a><p>
 	[Mother-Book] Introduction, <a href="Introduction.html#Mother-Book">p. xiv</a><p>
 	["Say: O leaders of religion!..."] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para99">&para;99</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#XCVIII">XCVIII</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p147-173Ch08.html#p163">p. 163</a>, <a href="../../Others/ROB/V3/p221-252Ch11.html#p240">p. 240</a>; vol. 4 <a href="../../Others/ROB/V4/p205-213Ch14.html#p212">p. 212</a><p>
 	["Whoso interpreteth..."] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para105">&para;105</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../../Others/ROB/V3/p371-399Ch17.html#p374">p. 374</a>
@@ -2013,6 +2027,7 @@ for the Book itself is the unerring Balance established amongst men. In this mos
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note26">26</a><p>
 	<i>'The heedless ones have hamstrung Thy white She-Camel...'</i>, see vol. 4, <a href="../../Others/ROB/V4/p425-428Apndx_I.html">Appendix I</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#130">Appendix III</a>)<p>
 	<i>'Crimson Ark'</i>, mentioned in the Qayyum-i-Asma, its occupants are the people of Bahá. See <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para37">p. 23</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#135b">Appendix III</a>)
 	</small></td>
@@ -2044,6 +2059,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	</td>
 	<td rowspan="3" VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note247">247</a><p>
 	[Adrianople] Introduction, <a href="Introduction.html#para38">p. xvi</a><p>
 	<i>'...These perspicuous verses have...been sent down from the Kingdom of Divine knowledge...'</i> For the origin of this Tablet see vol. 4, pp. <a href="../../Others/ROB/V4/p145-160Ch09.html#p153">153</a>-4. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#131b">Appendix III</a>)<p>
 	["O thou who hast set thy face..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p270-282Ch12.html#p270">p. 270</a><p>
@@ -2445,6 +2461,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note149">149</a><p>
 	Passages from the Báb concerning the Revelation of Bahá'u'lláh, see vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>, and vol. 2, pp. <a href="../../Others/ROB/V2/p370-387Ch17.html">370</a>-81. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#151">Appendix III</a>)<p>
 	["None knoweth the time..."] Introduction, <a href="Introduction.html#para43">p. xvii</a><p>
 	<i>'Him Whom God shall make manifest'</i>, the Promised One of the Bayán who was to manifest Himself after the Báb, i.e. Bahá'u'lláh. See vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#153">Appendix III</a>)	
