--- a/Baha'i/Baha/GL/Contents.html
+++ b/Baha'i/Baha/GL/Contents.html
@@ -174,6 +174,16 @@
        		<span class="text-span"><i>Tablet of Madínatu't-Tawhíd</i></span>
        </div>
 	   </td>
+       <td><small><div align="right"><a href="p003-346.html#XXIII">XXIII</a></div></small></td>
+       <td><small><div align="right">56</div></small></td>
+</tr>
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><i>Tablet of Madínatu't-Tawhíd</i></span>
+       </div>
+	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXIV">XXIV</a></div></small></td>
        <td><small><div align="right">59</div></small></td>
 </tr>
