--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -114,7 +114,10 @@
 	 	 <td VALIGN=top>
 		 Everything that is hath come to be through His irresistible decree. Whenever My laws appear like the sun in the heaven of Mine utterance, they must be faithfully obeyed by all, though My decree be such as to cause the heaven of every religion to be cleft asunder. He doeth what He pleaseth. He chooseth, and none <a name="p22"></a> may question His choice. Whatsoever He, the Well-Beloved, ordaineth, the same is, verily, beloved. To this He Who is the Lord of all creation beareth Me witness. Whoso hath inhaled the sweet fragrance of the All-Merciful, and recognized the Source of this utterance, will welcome with his own eyes the shafts of the enemy, that he may establish the truth of the laws of God amongst men. Well is it with him that hath turned thereunto, and apprehended the meaning of His decisive decree.<p>
 	 	 </td>
-	 	 <td VALIGN=top><hr><small>["Whenever My laws appear..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#para685">CLV</a></small></td>
+	 	 <td VALIGN=top><hr><small>
+	 	     <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note214">214</a><p>
+	 	     ["Whenever My laws appear..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#para685">CLV</a>
+         </small></td>
 	 	 <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">22</DIV></center></small></td>
 	 </tr>
 	 <tr>
@@ -977,7 +980,8 @@
 		 <td VALIGN=top><small>
 		 <hr>
 		 ["Say: O leaders of religion!..."] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para190">p. 128</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#XCVIII">XCVIII</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 p. <a href="../../Others/ROB/V3/p147-173Ch08.html#p163">163</a>, p. <a href="../../Others/ROB/V3/p221-252Ch11.html#p240">240</a>; vol. 4 p. <a href="../../Others/ROB/V4/p205-213Ch14.html#p212">212</a><p>
-		 ["weigh not the Book of God..."] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para265">p. 209</a> 
+		 ["weigh not the Book of God..."] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para265">p. 209</a><p>
+         <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note8">8</a>
 		 <p></small></td>
 		 <td>&nbsp;</td>
 	 </tr>
@@ -1536,7 +1540,11 @@
 	 	 <td VALIGN=top>
 		 Behold, the "mystery of the Great Reversal in the Sign of the Sovereign" hath now been made manifest. Well is it with him whom God hath aided to recognize <a name="p76"></a> the "Six" raised up by virtue of this "Upright Alif"; he, verily, is of those whose faith is true. How many the outwardly pious who have turned away, and how many the wayward who have drawn nigh, exclaiming: "All praise be to Thee, O Thou the Desire of the worlds!" In truth, it is in the hand of God to give what He willeth to whomsoever He willeth, and to withhold what He pleaseth from whomsoever He may wish. He knoweth the inner secrets of the hearts and the meaning hidden in a mocker's wink. How many an embodiment of heedlessness who came unto Us with purity of heart have We established upon the seat of Our acceptance; and how many an exponent of wisdom have We in all justice consigned to the fire. We are, in truth, the One to judge. He it is Who is the manifestation of "God doeth whatsoever He pleaseth", and abideth upon the throne of "He ordaineth whatsoever He chooseth".<p>
 		 </td>
-		 <td VALIGN=top><small>Notes <a href="p165-251Notes.html#note171">171</a>, <a href="p165-251Notes.html#note172">172</a></small>
+		 <td VALIGN=top><small>
+		     Notes <a href="p165-251Notes.html#note171">171</a>, <a href="p165-251Notes.html#note172">172</a>
+             <hr>
+             <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note214">214</a><p>
+         </small></td>
 	 	 <td VALIGN=top><br><small><center><DIV TITLE="Page number location is approximate">76</DIV></center></small></td>
    </tr>
 	 <tr>
@@ -1577,6 +1585,7 @@
 		 </td>
 	 	 <td VALIGN=top><small>
  		 <hr>
+         <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note305">305</a><p>
 		 ["Blessed is the man..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#XXXVII">XXXVII</a>
 		 </small>
 		 </td>
