--- a/Baha'i/Baha/KA/p089-102Supp.html
+++ b/Baha'i/Baha/KA/p089-102Supp.html
@@ -169,7 +169,11 @@ Page 99: "turning to any one" - anyone (no space) in PM
 	</i></center>
 	Make my prayer, O my Lord, a fountain of living waters whereby I may live as long as Thy sovereignty endureth, and may make mention of Thee in every world of Thy worlds.
 	</td>
-	<td></td>
+	<td><small>
+	    <hr>
+        <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note76">76</a><p>
+        </small>
+	</td>
 	<td></td>
 </tr>
 <tr>
