--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -1054,7 +1054,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
-	  ["He doeth whatsoever He willeth"] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para3">p. 1</a><p>
+	  ["He doeth whatsoever He willeth"] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para3">p. 1</a>; <i>The Kitáb-i-Íqán</i>, <a href="../KI/p095-258.html#parb271">&para;271</a>, Annotations <a href="../KI/Annotations.html#note214">214</a><p>   <p>
 	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#InfallibilityMostGreat">Most Great Infallibility</a>]
 	  </small></td>
 	  <td>&nbsp;</td>
@@ -1798,6 +1798,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  </td>
 	  <td VALIGN=TOP>
 	  <small><hr>
+      <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note185">185</a><p>
 	  ["Whoso interpreteth..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p374">p. 374</a>; <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para190">p. 130</a><p>
 	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Interpretation">Interpretation</a>] 
 	  </small>	  
