--- a/Baha'i/Baha/KI/Cover.html
+++ b/Baha'i/Baha/KI/Cover.html
@@ -33,7 +33,7 @@
 		   </FORM>
 	   </td>
        <td>
-	   	   <FORM ACTION="p001-094.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
 		   </FORM>	   
 	   </td>
@@ -92,7 +92,7 @@
 	<br><br><br>
 	<center><i><big>FOREWORD</big></i></center><br><br>
 	<blockquote>
-	This is one more attempt to introduce to the West, in language however inadequate, this book of unsurpassed pre-eminence among the writings of the Author of the Bahá'í Revelation. The hope is that it may assist others in their efforts to approach what must always be regarded as the unattainable goal-a befitting rendering of Bahá'u'llåh's matchless utterance.<br>
+	This is one more attempt to introduce to the West, in language however inadequate, this book of unsurpassed pre-eminence among the writings of the Author of the Bahá'í Revelation. The hope is that it may assist others in their efforts to approach what must always be regarded as the unattainable goal--a befitting rendering of Bahá'u'llåh's matchless utterance.<br>
 	<div align="right">SHOGHI</div>
 	</blockquote>
 	<br><br><br>
@@ -117,7 +117,7 @@
 		   </FORM>
 	   </td>
        <td>
-	   	   <FORM ACTION="p001-094.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
 		   </FORM>	   
 	   </td>
