--- a/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
+++ b/Baha'i/Baha/KI/p259-270GlossaryAndNotes.html
@@ -20,12 +20,12 @@
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
 <tr>
        <td>
-	   	   <FORM ACTION="p095-258.html" METHOD=GET>
+	   	   <FORM ACTION="Annotations.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>	   
+		   </FORM>
 	   </td>
        <td>
-	   	   <FORM ACTION="Cover.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -35,7 +35,7 @@
        <td>
 	   	   <FORM ACTION="p271-274Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>	   
+		   </FORM>
 	   </td>
 </tr>
 </table>
@@ -568,7 +568,7 @@
 </tr>
 <tr>
 	  <td>
-	  <b>Mullá Husayn</b>: The first to believe in the Báb, the first "Letter of the Living," the "Bábu'l-Báb"-meaning "the Gate of the Gate," a title given him by the Báb. Born in 1813, he was for nine years a student of Siyyid Kázim and for five a follower of the Báb. He was martyred at the fort of Shaykh Tabarsí, on February 2, 1849. 
+	  <b>Mullá Husayn</b>: The first to believe in the Báb, the first "Letter of the Living," the "Bábu'l-Báb"--meaning "the Gate of the Gate," a title given him by the Báb. Born in 1813, he was for nine years a student of Siyyid Kázim and for five a follower of the Báb. He was martyred at the fort of Shaykh Tabarsí, on February 2, 1849.
 	  </td>
 	  <td VALIGN=top><small>	  
 	  </small></td>
@@ -1028,12 +1028,12 @@
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
 <tr>
        <td>
-	   	   <FORM ACTION="p095-258.html" METHOD=GET>
+	   	   <FORM ACTION="Annotations.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>	   
+		   </FORM>
 	   </td>
        <td>
-	   	   <FORM ACTION="Cover.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -1043,7 +1043,7 @@
        <td>
 	   	   <FORM ACTION="p271-274Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>	   
+		   </FORM>
 	   </td>
 </tr>
 </table>
