--- a/Baha'i/Baha/KI/p271-274Index.html
+++ b/Baha'i/Baha/KI/p271-274Index.html
@@ -25,7 +25,7 @@
 		   </FORM>	   
 	   </td>
        <td>
-	   	   <FORM ACTION="Cover.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
@@ -390,7 +390,7 @@
 		   </FORM>	   
 	   </td>
        <td>
-	   	   <FORM ACTION="Cover.html" METHOD=GET>
+	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="^" NAME=up>
 		   </FORM>
 		   <FORM ACTION="../../../index.html" METHOD=GET>
